WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275434
REGRESSION(
272822@main
): IPC sync replies might use freed data
https://bugs.webkit.org/show_bug.cgi?id=275434
Summary
REGRESSION(272822@main): IPC sync replies might use freed data
Kimmo Kinnunen
Reported
2024-06-13 03:54:32 PDT
REGRESSION(
272822@main
): IPC sync replies might use freed data
bug 267240
Attachments
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2024-06-13 04:49:25 PDT
<
rdar://125071066
>
Kimmo Kinnunen
Comment 2
2024-06-13 23:16:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29808
EWS
Comment 3
2024-06-14 01:06:27 PDT
Committed
280004@main
(83b7d1094b34): <
https://commits.webkit.org/280004@main
> Reviewed commits have been landed. Closing PR #29808 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug