Cherry-pick 280004@main (83b7d1094b34). https://bugs.webkit.org/show_bug.cgi?id=275434

REGRESSION(272822@main): IPC sync replies might use freed data
    https://bugs.webkit.org/show_bug.cgi?id=275434
    rdar://125071066

    Reviewed by Cameron McCormack.

    The commit 272822@main would remove IPC::Decoder from the
    ConnectionSendSyncResult. The decoder owns the data pointed by the
    data references. This change results in sender reading freed memory
    when reading the reply data references.

    Fix by ensuring ConnectionSendSyncResult stores the IPC::Decoder that
    owns the data referenced by the reply.

    Using data references, e.g. std::spans, in IPC messages means that the
    data is stored in the IPC message. Contrast this with messages transferring
    Vectors: the Vectors store the data.

    * Source/WebKit/Platform/IPC/Connection.h:
    (IPC::ConnectionSendSyncResult::ConnectionSendSyncResult):
    (IPC::ConnectionSendSyncResult::reply):
    (IPC::ConnectionSendSyncResult::takeReply):
    (IPC::Connection::sendSync):
    * Source/WebKit/Platform/IPC/MessageSender.h:
    * Source/WebKit/Platform/IPC/StreamClientConnection.h:
    (IPC::StreamClientConnection::trySendSyncStream):
    * Source/WebKit/UIProcess/RemotePageProxy.h:
    * Source/WebKit/UIProcess/WebPageProxy.h:
    * Tools/TestWebKitAPI/Tests/IPC/ConnectionTests.cpp:
    (TestWebKitAPI::MockTestSyncMessageWithDataReply::name):
    (TestWebKitAPI::MockTestSyncMessageWithDataReply::arguments):
    (TestWebKitAPI::MockTestSyncMessageWithDataReply::MockTestSyncMessageWithDataReply):
    (TestWebKitAPI::TEST_P):
    * Tools/TestWebKitAPI/Tests/IPC/IPCTestUtilities.h:

    Canonical link: https://commits.webkit.org/280004@main

Canonical link: https://commits.webkit.org/274313.363@webkitglib/2.44